@@ -70,6 +70,7 @@
     "nuxt": "^2.10.2",
     "nuxt-express-module": "^0.0.11",
     "pg": "^7.12.1",
+    "sanitize-html": "^1.20.1",
     "sass-loader": "^8.0.0",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
