@@ -1,14 +1,14 @@
 const Sequelize = require('sequelize')
-const { fed_users: FedUsers, instances: Instances, comment: Comment } = require('../models')
+const { ap_user: APUser, instance: Instance, resource: Resource } = require('../models')
 
 const instancesController = {
   async getAll (req, res) {
-    const instances = await Instances.findAll({
+    const instances = await Instance.findAll({
       attributes: {
         include: [[Sequelize.fn('count', Sequelize.col('domain')), 'users']]
       },
       group: ['domain'],
-      include: [{ model: FedUsers, attributes: [] }]
+      include: [{ model: APUser, attributes: [] }]
     })
     return res.json(instances)
   },
@@ -17,12 +17,12 @@ const instancesController = {
    * get instance users
    */
   async get (req, res) {
-    const fedi_users = await FedUsers.findAll({ where: { instanceDomain: req.params.instance_domain }, include: [Comment] })
+    const fedi_users = await APUser.findAll({ where: { instanceDomain: req.params.instance_domain }, include: [Resource] })
     return res.json(fedi_users)
   },
 
   async toggleBlock (req, res) {
-    const instance = await Instances.findByPk(req.body.instance)
+    const instance = await Instance.findByPk(req.body.instance)
     if (!instance) { return res.status(404).send('Not found') }
     await instance.update({ blocked: req.body.blocked })
     return res.json(instance)
