@@ -1,6 +1,9 @@
 All notable changes to this project will be documented in this file.
 
 ### unreleased
+- [refactor] s/fed_user/ap_user
+- [fedi] admin moderation
+- [refactor] s/comment/resource/
 - [refactor] remove `username` field
 - [doc] about and federation
 
